minor additions to adiabatic condition

--- a/documentation/source/general/tutorial/CD.ipynb
+++ b/documentation/source/general/tutorial/CD.ipynb
@@ -14,19 +14,23 @@
     "\n",
     "## The concept of counterdiabatic driving\n",
     "\n",
-    "To drive a system adiabatically, we must meet the adiabatic condition. The left side of the inequality describes the size of energy gaps $\\Delta = E_m - E_n$ of different states $\\ket{m}, \\ket{n}$ \n",
-    "compared the rate of change $\\partial_{\\lambda} H(\\lambda)$ of the hamiltonian $H$ at times of the scheduling function $\\lambda(t) \\in \\left[0, 1\\right]$\n",
+    "To drive a system adiabatically, we must meet the adiabatic condition. This condition ensures that the system's state follows the instantaneous eigenstates of the time-dependent Hamiltonian $H(\\lambda(t))$, where $\\lambda(t) \\in [0, 1]$ is a scheduling parameter that interpolates between initial ($\\lambda=0$) and final ($\\lambda=1$) Hamiltonians.\n",
+    "The energy gaps $\\Delta_{mn} = E_m(\\lambda) - E_n(\\lambda)$ between eigenstates $\\ket{m(\\lambda)}$ and $\\ket{n(\\lambda)}$ must be large compared to the rate of change of the Hamiltonian. Specifically, the adiabatic theorem requires:\n",
     "\n",
     "$$ \\max_{n, m} \\left[ \\max_{\\lambda} \\bigg| \\frac{\n",
     "    \\hbar \\frac{\\partial \\lambda}{\\partial t} \\bra{m(\\lambda)} \\partial_{\\lambda} H(\\lambda) \\ket{n(\\lambda)}}\n",
     "    {(E_m(\\lambda) - E_n(\\lambda))^2} \\bigg| \\right] \\ll 1, m \\neq n $$\n",
     "\n",
+    "Here, $\\partial_\\lambda H(\\lambda)$ is the derivative of the Hamiltonian with respect to $\\lambda$, and $\\frac{\\partial \\lambda}{\\partial t}$ controls the speed of evolution. The matrix element $\\bra{m} \\partial_\\lambda H \\ket{n}$ quantifies coupling between states.\n",
+    "\n",
     "The adiabatic condition roughly tells us that in order to avoid transitions to exited states we must drive the system slow compared to the size of the energetic gaps. Unfortunately, we cannot push this evolution time too strongly as this leads to quantum incoherences and disruption through noise.\n",
     "Therefore we want to mitigate the diabatic transitions so that we can drive the system adiabatically while keeping the evolution time short.\n",
     "\n",
-    "To understand how diabatic transitions can be mitigated, we need to introduce the adiabatic gauge potential $A_{\\lambda}$. This is a hermitian operator whose diagonal elements desribe the *adiabatic-*  and its off-diagonal elements describe the *non-adiabatic* dynamics of the driven system. It is related to the state evolution in the instantaneous eigenbasis (denoted by $\\sim$):\n",
+    "To understand how diabatic transitions can be mitigated, we need to introduce the **adiabatic gauge potential (AGP)** $A_{\\lambda}$. This is a hermitian operator whose diagonal elements desribe the *adiabatic-* (phase accumulation) and its off-diagonal elements describe the *non-adiabatic* (transition-inducing) dynamics of the driven system. It is related to the state evolution in the instantaneous eigenbasis (denoted by $\\sim$):\n",
     "\n",
     "$$ i \\hbar \\frac{d\\ket{\\tilde{\\Psi}}}{dt} = \\left( \\tilde{H} - \\frac{\\partial \\lambda}{\\partial t} A_{\\lambda} \\right) \\ket{\\tilde{\\Psi}} $$\n",
+    "\n",
+    "Here, $\\tilde{H}$ is the diagonal Hamiltonian in the eigenbasis. The term $- \\frac{\\partial \\lambda}{\\partial t} A_\\lambda$ encodes the non-adiabatic effects.\n",
     "\n",
     "The idea behind counterdiabatic driving is to add a term to the hamiltonian that **counteracts the diabatic transitions** (hence the name). It turns out that this can be done by adding the negation of the AGP!\n",
     "\n",
