Final couple of polishing actions on BE tutorials

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -26,7 +26,7 @@
     "| [.from_array(arr)](../../../reference/Block%20Encodings/methods/from_array.rst) | Encodes a NumPy matrix | Quick prototyping of small, specific matrices |\n",
     "| [.from_operator(op)](../../../reference/Block%20Encodings/methods/from_operator.rst) | Encodes a Hamiltonian | Physics and Chemistry simulations |\n",
     "| [.from_lcu(coeffs, unitaries)](../../../reference/Block%20Encodings/methods/from_lcu.rst) | Custom weighted sum of unitaries | High-efficiency implementation |\n",
-    "| [.resources(qv)](../../../reference/Block%20Encodings/methods/resources.rst) | Estimates gate counts, depth, qubits. | Resource analysis and benchmarking |\n",
+    "| [.resources(qv)](../../../reference/Block%20Encodings/methods/resources.rst) | Estimates gate counts, depth, and qubits. | Resource analysis and benchmarking |\n",
     "| [.apply(qv)](../../../reference/Block%20Encodings/methods/apply.rst) | Applies a matrix to a quantum state | NISQ hardware with manual post-selection |\n",
     "| [.apply_rus(prep_func)](../../../reference/Block%20Encodings/methods/apply_rus.rst) | Applies a matrix to a quantum state | Fault-tolerant / Repeat-Until-Success logic |\n",
     "| ``+``, ``-``, ``*``, ``@``, ``.kron()`` | Algebraic arithmetic on encodings | Constructing complex composite systems |\n",
@@ -69,7 +69,7 @@
     "\n",
     "- [.from_array](../../../reference/Block%20Encodings/methods/from_array.rst) constructs a BlockEncoding from a numpy array,\n",
     "\n",
-    "- [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) constructs a Blockencoding directly from a Hamiltonian constructed via QubitOperators, or FermionicOperators,\n",
+    "- [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) constructs a BlockEncoding directly from a Hamiltonian constructed via QubitOperators, or FermionicOperators,\n",
     "\n",
     "- [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) constructs a BlockEncoding using the Linear Combination of Unitaries approach,\n",
     "\n",
@@ -126,7 +126,7 @@
     "\n",
     "If such a matrix $A$ is expressed as shown above (as a weighted sum of unitaries), the LCU algorithmic primitive uses three (well, technically two) oracles:\n",
     "\n",
-    "- $\\text{PREPARE}$ [prepares](../../../reference/Primitives/prepare.rst) (as its name successfully suggests) a superposition of index states weighted by the square roots of the coefficients $\\alpha_i$ in the ancillary variable:$$\\text{PREP}\\ket{0}_a=\\sum_{i=0}^{m-1}\\sqrt{\\frac{\\alpha_i}{\\alpha}}\\ket{i}_a$$\n",
+    "- $\\text{PREPARE}$ [prepares](../../../reference/Primitives/prepare.rst) (as its name suggests) a superposition of index states weighted by the square roots of the coefficients $\\alpha_i$ in the ancillary variable:$$\\text{PREP}\\ket{0}_a=\\sum_{i=0}^{m-1}\\sqrt{\\frac{\\alpha_i}{\\alpha}}\\ket{i}_a$$\n",
     "\n",
     "- $\\text{SELECT}$ applies the corresponding unitary $U_i$ to the operand (target) variable, controlled by the ancillary variable:$$\\text{SEL}=\\sum_{i=0}^{m-1}\\ket{i}\\bra{i}_a\\otimes U_i,$$\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "As seen in the figure above, this can be done via multiple controlled operations. In Qrisp, however, we use [q_switch](../../../reference/Primitives/qswitch.rst), which is just another name for the select operator (multiplexor is another name found in literature for the same thing, btw). What's so special about [q_switch](../../../reference/Primitives/qswitch.rst)? Well, we've implemented a massively more efficient approach about how to apply such a (quantum) switch case (hence the name) based on balanced binary trees. For further information about this, please refer to the paper from Khattar and Gidney, [Rise of conditionally clean ancillae for efficient quantum circuit constructions](https://arxiv.org/pdf/2407.17966v1).\n",
     "\n",
-    "How are we feeling? I assume that the researchers in the field could be portrayed with this emoji (😎), while people coming from outside of quantum can feel a bit overwhelmed (🥲). Let's balance the target audiences by a relevant example that is the cornerstone of solving partial differential equations, where we also explain how to use the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) method (went quite the tangent, huh? Glad you're still here - it'll be worth it!).\n",
+    "How are we feeling? I assume that the researchers in the field could be portrayed with this emoji (😎), while people coming from outside of quantum can feel a bit overwhelmed (🥲). Let's balance the target audiences by a relevant example that is the cornerstone of solving partial differential equations, where we also explain how to use the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) method (we went off on a bit of a tangent there, huh? Glad you're still here - it'll be worth it!).\n",
     "\n",
     "Before showing an example, let us first quickly showcase how to manually define a [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst).\n",
     "Feel free to also skip to the next section, showing the example of block-encoding the discrete Laplacian.\n",
