--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "After learning about Qubitization, this tutorial will also explain how to block-encode [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials) and why they are useful. Namely, we'll cover the [quantum Lanczos method](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/), a technique that uses the Krylov subspace (built from Chebyshev polynomials) to estimate the ground state energy of a Hamiltonian without needing complex time-evolution. We will also cover the [Childs-Kothari-Somma (CKS) algorithm](https://arxiv.org/pdf/1511.02306), which is a near-optimal linear system solver that uses block encoded Chebyshev polynomials in another layer of LCU, this time with a neat trick (spoiler alert, it's unary encoding).\n",
     "\n",
-    "We will then show how to run the algorithms stemming from [generalized QSP](https://arxiv.org/pdf/2308.01501) in Qrisp, and how the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) makes polynomial transformations, solving linear systems, and hamiltonian simulation as simple as calling [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst), [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst), and [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) methods respectively.\n",
+    "We will then show how to run the algorithms stemming from [generalized QSP](https://arxiv.org/pdf/2308.01501) in Qrisp, and how the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) makes polynomial transformations, solving linear systems, and Hamiltonian simulation as simple as calling [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst), [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst), and [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) methods respectively.\n",
     "\n",
     "Here's a summary:\n",
     "\n",
@@ -38,11 +38,11 @@
     "## Qubitization\n",
     "If a Block Encoding is a \"static snapshot\" of a matrix $A$, Qubitization is what makes it \"move\". Technically, Qubitization is a method to transform an $(\\alpha, m, \\epsilon)$-block-encoding of a matrix $A$ into a special unitary operator $W$, often referred to as the \"walk operator\". This operator has a nice property: it maps the eigenvalues $\\lambda$ of $A$ to the eigenvalues $e^{\\pm i \\arccos(\\lambda/\\alpha)}$ in a set of two-dimensional invariant subspaces. \n",
     "\n",
-    "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{I}_a)\\otimes \\mathbb{I}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = U\\cdot R$.\n",
+    "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{I}_a)\\otimes \\mathbb{I}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = R\\cdot U$.\n",
     "\n",
     "Rigorous analysis (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)) shows that if $\\ket{\\psi_\\lambda}$ is an eigenvector of $H/\\alpha$ with eigenvalue $\\lambda \\in [-1, 1]$, the walk operator $W$ doesn't wander through the whole Hilbert space. Instead, it acts on an invariant 2D subspace spanned by the \"ideal\" state $\\ket{G}\\ket{\\psi_\\lambda}$ and an orthogonal state. Within this subspace, the eigenvalues of $W$ are $\\mu_\\pm = \\lambda \\pm i\\sqrt{1-\\lambda^2} = e^{\\pm i \\arccos(\\lambda)}$. Essentially, Qubitization \"lifts\" the eigenvalues of our matrix onto the unit circle in the complex plane, allowing us to manipulate them using phase rotations.\n",
     "\n",
-    "This seems like a mouthful, but in order for this tutorial to cater to both developers coming from the classical domain, as well as researchers in quantum computing, it's the \"necessary evil\". To make it up to you, we're going to show how in Qrisp, you don't need to build these reflections manually. But first, some visual aid so that you see that it's not as complex as it sounds.\n",
+    "This seems like a mouthful, but in order for this tutorial to cater to both developers coming from the classical domain, and researchers in quantum computing, it's the \"necessary evil\". To make it up to you, we're going to show how in Qrisp, you don't need to build these reflections manually. But first, some visual aid so that you see that it's not as complex as it sounds.\n",
     "\n",
     "![Qubitization](qubitization.png)\n",
     "\n",
@@ -91,7 +91,7 @@
     "One of the most powerful features of Qubitization is its natural relationship with Chebyshev polynomials of the first kind, $T_k(x)$, defined as $T_k(\\cos \\theta) = \\cos(k\\theta)$. If we apply the walk operator $W$ $k$-times, the resulting unitary $W^k$ contains $T_k(A/\\alpha)$ block encoded in the top-left block:\n",
     "$$(\\bra{G} \\otimes \\mathbb{I}) W^k (\\ket{G} \\otimes \\mathbb{I}) = T_k(A/\\alpha).$$\n",
     "\n",
-    "This is kind of resembling by how we defined our typical block encoding business. To freshen the memory, this is how we have defined block encoding in the previous tutorial:\n",
+    "This resembles how we defined our typical block encoding business. To refresh your memory, this is how we have defined block encoding in the previous tutorial:\n",
     "$$(\\bra{G} \\otimes \\mathbb{I}) U (\\ket{G} \\otimes \\mathbb{I}) = A/\\alpha.$$\n",
     "We just replaced $U$ with $W^k$. I'm still in awe about how this holds true - it cannot be this simple, right?! Well, based on the theory backing it, it is. Awesome!\n",
     "\n",
@@ -182,7 +182,7 @@
    "id": "332ccef0",
    "metadata": {},
    "source": [
-    "Let's, at this point, also show how we could do a quick benchmark of the scaling of resources needed. Since the walk operatore $W=(RU)$ is exactly the block encoding overhead for Chebyshev polynomials, we can see how the resources scale with repeated applications of them to block-encode $T_k$."
+    "Let's, at this point, also show how we could do a quick benchmark of the scaling of resources needed. Since the walk operator $W=(RU)$ is exactly the block encoding overhead for Chebyshev polynomials, we can see how the resources scale with repeated applications of them to block-encode $T_k$."
    ]
   },
   {
@@ -214,7 +214,7 @@
     "\n",
     "## Quantum Lanczos method\n",
     "\n",
-    "The ability to efficiently block-encode Chebyshev polynomials isn't just a mathematical flex; it’s a prerequisite for one of the most exciting algorithms in recent years: the Quantum Lanczos Method, an algorithms that redefines how we study quantum systems.\n",
+    "The ability to efficiently block-encode Chebyshev polynomials isn't just a mathematical flex; it’s a prerequisite for one of the most exciting algorithms in recent years: the Quantum Lanczos Method, an algorithm that redefines how we study quantum systems.\n",
     "\n",
     "Typically, if we want to find the ground state energy or spectral properties of a Hamiltonian, we might reach for Quantum Phase Estimation (QPE). However, QPE requires long-time Hamiltonian simulation (real-time evolution), which can be extremely expensive in terms of circuit depth.\n",
     "\n",
@@ -326,7 +326,7 @@
     "\n",
     "- $k=5$: The state $\\ket{111\\dots00}$ continues the sequence (bottom left in figure below).\n",
     "\n",
-    "- $k=2j_0+1$: This cascades down to the final state $\\ket{111\\dots11}$, where $j_0$ is the truncation order from the original CKS paper. In this state, all $(RU)^k$ segments are sequentially applied (bottom right in figure below). \n",
+    "- $k=2j_0+1$: This cascades down to the final state $\\ket{111\\dots11}$, where $j_0$ is the truncation order from the original CKS paper. In this state, all $(RU)^k$ segments are sequentially applied (bottom figure below). \n",
     "\n",
     "Here is the \"figure below\" promised above:\n",
     "\n",
