--- a/documentation/source/general/tutorial/Sudoku.ipynb
+++ b/documentation/source/general/tutorial/Sudoku.ipynb
@@ -95,7 +95,7 @@
     "**reject**: Is the function that returns True, if called on a node, representing a\n",
     "branch that should no longer be considered.\n",
     "\n",
-    "Also required is a [QuantumVariable](../../reference/Core/QuantumVariable.rst) that specifies the branches\n",
+    "Also required is a [QuantumVariable](../../reference/Core/QuantumVariable.rst) `branch_qv` that specifies the branches\n",
     "that can be taken by the algorithm at each node.\n",
     "\n",
     "**Node encoding**\n",
@@ -110,18 +110,20 @@
     "\n",
     "To fully identify a node, we also need to specify the path to take starting\n",
     "at the root. This path is encoded in a [QuantumArray](../../reference/Core/QuantumArray.rst), which can be found\n",
-    "under the attribute `branch_qa`. To fit into the setting of height encoding,\n",
-    "this array contains the reversed path.\n",
+    "under the attribute `branch_qa`. The variable `branch_qv` serves as a template for the entries of this array.\n",
+    "To fit into the setting of height encoding, this array contains the reversed path.\n",
     "\n",
     "We summarize the encoding by giving an example:\n",
     "    \n",
-    "In a binary tree with depth 5, the node that has the path from the root [1,1]\n",
+    "In a binary tree with depth 4, the node that has the path from the root [0,1]\n",
     "is encoded by\n",
     "\n",
     "$$\n",
-    "\\ket{\\text{branch qa}} &= \\ket{0}\\ket{0}\\ket{0}\\ket{1}\\ket{1}\\\\\n",
-    "\\ket{\\text{h}} = \\ket{3} &= \\ket{00010}\\\\\n",
+    "\\begin{align}\n",
+    "\\ket{\\text{branch qa}} &= \\ket{[0,0,1,0]}\\\\\n",
+    "\\ket{\\text{h}} = \\ket{2} &= \\ket{00100}\\\\\n",
     "\\ket{x} &= \\ket{\\text{branch qa}}\\ket{\\text{h}}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "\n",
@@ -130,12 +132,109 @@
     "The predicate functions `accept` and `reject` must meet certain conditions\n",
     "for the algorithm to function properly:\n",
     "    \n",
-    "* Both functions have to return a QuantumBool.\n",
+    "* Both functions have to return a [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst).\n",
     "* Both functions must not change the state of the tree.\n",
     "* Both functions must delete/uncompute all temporarily created QuantumVariables.\n",
     "* `accept` and `reject` must never return `True` on the same node.\n",
     "\n",
-    "More details for the Qrisp interface to quantum backtracking (including visualisation features) can be found in the QuantumBacktrackingTree documentation."
+    "More details for the Qrisp interface to quantum backtracking (including visualisation features) can be found in the \n",
+    "[QuantumBacktrackingTree](../../reference/Algorithms/QuantumBacktrackingTree.rst) documentation.\n",
+    "\n",
+    "Let us illustrate this with an example for a binary tree of depth 3:\n",
+    "\n",
+    "-   The `accept` function below simply marks the node with the path [1,1,1] starting from the root in a tree of depth 3.\n",
+    "-   The `reject` function discards the node with path [0] starting from the root in a tree of depth 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afc6d229",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from qrisp import auto_uncompute, QuantumFloat\n",
+    "from qrisp.quantum_backtracking import QuantumBacktrackingTree\n",
+    "\n",
+    "\n",
+    "# Automatically delete/uncompute all temporarily created QuantumVariables.\n",
+    "@auto_uncompute\n",
+    "def accept(tree):\n",
+    "    # Marks the node with the path [1,1,1] \n",
+    "    # starting from the root in a tree of depth 3.\n",
+    "    return (\n",
+    "        (tree.branch_qa[0] == 1) & \n",
+    "        (tree.branch_qa[1] == 1) & \n",
+    "        (tree.branch_qa[2] == 1)\n",
+    "    )\n",
+    "\n",
+    "@auto_uncompute\n",
+    "def reject(tree):\n",
+    "    # Discards the node with path [0] \n",
+    "    # starting from the root in a tree of depth 3.\n",
+    "    return (tree.h==2) & (tree.branch_qa[2] == 0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b41bb981",
+   "metadata": {},
+   "source": [
+    "Next, we initalize the `QuantumBacktrackingTree` in the $\\ket{\\text{root}}=\\ket{[0,0,0]}\\ket{3}$ state, and apply two steps of the **discrete quantum walk**. \n",
+    "One step of the walk consists of applying the diffusion operators $R_A$ and $R_B$ which act as identity $\\mathbb{I}$ on a marked node $x$, as minus identity $-\\mathbb{I}$ on a rejected node $x$,\n",
+    "and as a reflection in the invariant subspace $\\mathcal{H}_x$ spanned by a node $x$ and is child nodes $x\\rightarrow y$. (See [this paper](https://arxiv.org/abs/2402.10060) for more details.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ef12219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = QuantumBacktrackingTree(\n",
+    "    max_depth=3,\n",
+    "    branch_qv=QuantumFloat(1), # Use 1 qubit variable for a binary tree.\n",
+    "    accept=accept,\n",
+    "    reject=reject\n",
+    ")\n",
+    "tree.init_node([]) # Initialize tree in the |root> = |[0,0,0]>|3> state.\n",
+    "\n",
+    "# Create a figure with 2 rows and 2 columns.\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(12, 8))\n",
+    "axs = axs.flatten()  # Flatten to iterate easily: 0, 1, 2, 3.\n",
+    "\n",
+    "# Apply two steps of the discrete quantum walk operator R_B R_A.\n",
+    "for i in range(2):\n",
+    "    # Apply R_A.\n",
+    "    tree.qstep_diffuser(even=False) # Act on \n",
+    "    tree.visualize_statevector(ax=axs[2*i])\n",
+    "    axs[2*i].set_title(f\"Iteration {i+1}: After R_A\", fontsize=18)\n",
+    "\n",
+    "    # Apply R_B.\n",
+    "    tree.qstep_diffuser(even=True)\n",
+    "    tree.visualize_statevector(ax=axs[2*i + 1])\n",
+    "    axs[2*i + 1].set_title(f\"Iteration {i+1}: After R_B\", fontsize=18)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6bf9657",
+   "metadata": {},
+   "source": [
+    "The tree visualization provides a look at how the quantum state evolves. The colors of the nodes (green, purple) indicate the sign of their (non-zero) amplitudes and the brightness signifies the magnitude of the amplitudes in a superposition state. Conversely, black nodes indicate zero amplitudes. We observe the following:\n",
+    "\n",
+    "-   Top left ($\\ket{x}=R_A\\ket{r}$): The initial application of the diffuser $R_A$ explores the children of the root. \n",
+    "    At this stage, all first-level nodes, including the rejected node [0], are explored and possess non-zero amplitudes.\n",
+    "\n",
+    "-   Top right ($\\ket{x}=R_BR_A\\ket{r}$): The pruning mechanism becomes visible. Branches originating from the rejected node [0] remain unexplored. \n",
+    "    This occurs because the diffuser $R_B$ acts as $-\\mathbb{I}$ on the node state $\\ket{x} = \\ket{[0,0,0]}\\ket{2}$.\n",
+    "\n",
+    "-   Bottom: The quantum walk further explores the valid branches of the tree."
    ]
   },
   {
@@ -151,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8807b966",
    "metadata": {},
    "outputs": [],
@@ -195,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5fe6eac9",
    "metadata": {},
    "outputs": [],
@@ -226,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "48978843",
    "metadata": {},
    "outputs": [],
@@ -306,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fe2a5fdb",
    "metadata": {},
    "outputs": [],
@@ -377,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2cb9c8bf",
    "metadata": {},
    "outputs": [],
@@ -417,20 +516,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a21064b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{False: 1.0}                                                                         \u001b[2K\n",
-      "{True: 1.0}                                                                          \u001b[2K\n",
-      "{False: 1.0}                                                                         \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_assigments = QuantumArray(qtype=QuantumFloat(2), shape=(3,))\n",
     "\n",
@@ -457,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7e0c5432",
    "metadata": {},
    "outputs": [],
@@ -502,18 +591,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f4b573af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sqrt(2)*(|0>*|False> + |1>*|True>)/2                                                 \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_value = QuantumFloat(2)\n",
     "q_value[:] = {0: 1 / 2**0.5, 1: 1 / 2**0.5}\n",
@@ -535,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b56b6137",
    "metadata": {},
    "outputs": [],
@@ -582,17 +663,7 @@
    "execution_count": null,
    "id": "801bf334",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{False: 1.0}                                                                         \u001b[2K\n",
-      "{True: 1.0}                                                                          \u001b[2K\n",
-      "{True: 1.0}                                                                          \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_assigments = QuantumArray(qtype=QuantumFloat(2), shape=(3,))\n",
     "q_assigments[:] = np.arange(3)\n",
@@ -613,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "21131711",
    "metadata": {},
    "outputs": [],
@@ -666,19 +737,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b8adc99e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{True: 1.0}                                                                          \u001b[2K\n",
-      "{False: 1.0}                                                                         \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_assignments = QuantumArray(qtype=QuantumFloat(2), shape=(4,))\n",
     "q_assignments[:] = [1, 1, 1, 2]\n",
@@ -716,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e774bd0c",
    "metadata": {},
    "outputs": [],
@@ -764,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2fe04d35",
    "metadata": {},
    "outputs": [],
@@ -806,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b5e37f02",
    "metadata": {},
    "outputs": [],
@@ -864,18 +926,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3a5820ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{True: 1.0}                                                                          \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_assigments = QuantumArray(qtype=QuantumFloat(2), shape=(4,))\n",
     "q_assigments[:] = [0, 0, 1, 2]\n",
@@ -901,18 +955,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5be0f214",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{False: 1.0}                                                                         \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_assigments = QuantumArray(qtype=QuantumFloat(2), shape=(4,))\n",
     "q_assigments[:] = [0, 0, 2, 2]\n",
@@ -938,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "29c1c4df",
    "metadata": {},
    "outputs": [],
@@ -975,18 +1021,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "932810ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solution exists                                                                      \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Decrease the empty field count\n",
     "sudoku_board = np.array([[0, -1, 2, 3], [2, 3, 0, -1], [1, 0, 3, 2], [3, -1, 1, 0]])\n",
@@ -1034,18 +1072,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d4c2d3a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[np.int32(1), np.int32(1), np.int32(2)]                                              \u001b[2K\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qrisp import *\n",
     "from qrisp.quantum_backtracking import QuantumBacktrackingTree as QBT\n",
@@ -1076,7 +1106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp_new_11",
    "language": "python",
    "name": "python3"
   },
@@ -1090,7 +1120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
