More doc improvements

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -273,8 +273,7 @@
     "    E = H.expectation_value(filtered_psi_prep, precision=0.001)()\n",
     "    return E\n",
     "\n",
-    "#print(main())\n",
-    "# -0.6186466466466466"
+    "print(main())"
    ]
   },
   {
@@ -378,7 +377,7 @@
     "\n",
     "$$ \\text{SELECT} = \\sum_i\\ket{i}_a\\bra{i}_a\\otimes P_i $$\n",
     "\n",
-    "acts as a [quantum switch case](../../reference/Primitives/qswitch.rst) selecting the $i$-th unitary $P_i$ conditioned on the ancilla being in state $\\ket{0}_i$, and\n",
+    "acts as a [quantum switch case](../../reference/Primitives/qswitch.rst) applying the $i$-th unitary $P_i$ conditioned on the ancilla being in state $\\ket{i}_a$, and\n",
     "\n",
     "$$ \\text{PREP}\\ket{0} = \\sum_i\\sqrt{\\alpha_i}\\ket{i}_a $$\n",
     "\n",
@@ -487,8 +486,7 @@
     "    E = H.expectation_value(filtered_psi_prep, precision=0.001)()\n",
     "    return E\n",
     "\n",
-    "#print(main())\n",
-    "# -0.6187347347347347 "
+    "print(main())"
    ]
   },
   {
