Added direct construction of BlockEncoding object in changelog. Other minor changes.

--- a/documentation/source/general/changelog/0.8.rst
+++ b/documentation/source/general/changelog/0.8.rst
@@ -8,22 +8,24 @@ Qrisp 0.8 is a landmark release bringing **Quantum Linear Algebra** to the foref
 BlockEncoding Class
 -------------------
 
-The :ref:`BlockEncoding <BlockEncoding>` class is the central abstraction for Quantum Linear Algebra in Qrisp. It embeds a non-unitary operator $A$ into the upper-left block of a larger unitary $U_A$ and provides an intuitive, NumPy-like interface: users write matrix expressions - addition, multiplication, inversion, polynomial transformations - and Qrisp compiles them into gate sequences automatically.
-
+The BlockEncoding class is the central abstraction for Quantum Linear Algebra in Qrisp. By establishing block encodings as the main programming abstractions, it allows users to program complex quantum linear algebra as easily as handling arrays in NumPy. It seamlessly embeds a non-unitary operator into the upper-left block of a larger unitary system.  With this intuitive interface, users can write clean matrix expressions while Qrisp's compiler automatically handles the heavy lifting of underlying circuit construction and ancilla management.
 Block encodings can be constructed from a variety of sources:
 
-* A :ref:`QubitOperator <QubitOperator>` or :ref:`FermionicOperator <FermionicOperator>` via :func:`BlockEncoding.from_operator <qrisp.block_encodings.BlockEncoding.from_operator>`.
-* A NumPy array or sparse matrix via :func:`BlockEncoding.from_array <qrisp.block_encodings.BlockEncoding.from_array>`.
-* A custom Linear Combination of Unitaries via :func:`BlockEncoding.from_lcu <qrisp.block_encodings.BlockEncoding.from_lcu>`.
+Construction methods
+^^^^^^^^^^^^^^^^^^^^
+* :func:`BlockEncoding.from_array <qrisp.block_encodings.BlockEncoding.from_array>` constructs a BlockEncoding from a NumPy array or sparse matrix, ideal for quick prototyping.
+* :func:`BlockEncoding.from_operator <qrisp.block_encodings.BlockEncoding.from_operator>` encodes a Hamiltonian (e.g. :ref:`QubitOperator <QubitOperator>` or :ref:`FermionicOperator <FermionicOperator>`), which is particularly useful for physics and chemistry simulations.
+* :func:`BlockEncoding.from_lcu <qrisp.block_encodings.BlockEncoding.from_lcu>` uses the Linear Combination of Unitaries (LCU) approach to construct custom weighted sums of unitaries.
+* Direct constructor: For advanced users, the :func:`BlockEncoding <qrisp.block_encodings.BlockEncoding>`class constructor allows manual definition of an encoding by specifying the normalization factor (``alpha``), ancilla variables (``ancillas``), and a custom unitary function.
 
-Once constructed, block encodings support a rich set of operations:
-
-* **Matrix arithmetic**: ``+``, ``-``, ``*``, ``@`` (matrix product), Kronecker product.
+Supported operations
+^^^^^^^^^^^^^^^^^^^^
+* **Matrix arithmetic**: Standard algebraic operations including addition (``+``), subtraction (``-``), scalar multiplication (``*``), matrix product (``@``), and Kronecker product (``.kron()``).
 * **Spectral transformations**: :func:`inv <qrisp.block_encodings.BlockEncoding.inv>` (matrix inversion), :func:`poly <qrisp.block_encodings.BlockEncoding.poly>` (arbitrary polynomial via GQET), :func:`sim <qrisp.block_encodings.BlockEncoding.sim>` (Hamiltonian simulation $e^{-iHt}$), :func:`chebyshev <qrisp.block_encodings.BlockEncoding.chebyshev>` ($T_k(A)$), and :func:`qubitization <qrisp.block_encodings.BlockEncoding.qubitization>`.
 * **Application**: :func:`apply <qrisp.block_encodings.BlockEncoding.apply>` for direct application, :func:`apply_rus <qrisp.block_encodings.BlockEncoding.apply_rus>` with automatic post-selection via Repeat-Until-Success, and :func:`expectation_value <qrisp.block_encodings.BlockEncoding.expectation_value>` via the Hadamard test.
-* **Resource estimation**: :func:`resources <qrisp.block_encodings.BlockEncoding.resources>` for gate count and depth analysis.
+* **Resource estimation**: :func:`resources <qrisp.block_encodings.BlockEncoding.resources>` for gate count, depth, and qubit amount analysis.
 
-For a hands-on introduction, check out the :ref:`Block Encoding tutorial <BE101>`.
+For a hands-on introduction, check out the BlockEncoding tutorials: :ref:`BlockEncoding class 101 <BE101>`, and :ref:`BlockEncoding class 201 <BE201>`.
 
 Scalable Shor's Algorithm
 -------------------------
